# lightship

./: .gitignore  README.md  RELEASING.md
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: baseline.rs  config.rs  detect.rs  finding.rs  fix.rs  lib.rs  meta.rs  progress.rs  report.rs  rule.rs  util.rs
crates/core/src/report/: commands.rs  compact.rs  github.rs  json.rs  mod.rs  pretty.rs  sarif.rs  snippet.rs  summary.rs
crates/core/src/rules/: a_no_text.rs  aria_ref_target.rs  button_name.rs  canonical_link.rs  deprecated_tag.rs  duplicate_id.rs  duplicate_meta.rs  heading_order.rs  html_lang.rs  iframe_title.rs  img_alt.rs  img_dimensions.rs  img_lazy_loading.rs  label_control.rs  label_for_target.rs  lang_valid.rs  link_rel_icon.rs  link_target_blank.rs  meta_charset.rs  meta_description.rs  meta_description_length.rs  meta_refresh.rs  meta_viewport.rs  mixed_content.rs  mod.rs  og_basic.rs  positive_tabindex.rs  render_blocking_script.rs  single_h1.rs  table_headers.rs  title_length.rs  title_present.rs
crates/core/tests/: integration.rs
crates/core/tests/fixtures/: clean.html  duplicate-id.html  empty-link.html  img-no-dim.html  no-alt.html  no-charset.html  no-description.html  no-lang.html  no-title.html  no-viewport.html
npm/lightship-cli/: README.md  bin.js  package.json
scripts/: build-npm.mjs
