[package]
name = "lightship"
version = "0.2.1"
edition = "2024"
description = "Static linter for built HTML output (a11y / SEO / performance) that fails your CI build on problems."
license = "MIT"
repository = "https://github.com/gianlucadark/lightship"

[[bin]]
name = "lightship"
path = "src/main.rs"

[dependencies]
lightship-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
notify = "6"
