[package]
name = "lightship-core"
version = "0.2.1"
edition = "2024"
description = "Core library for Lightship: a static linter for built HTML output."
license = "MIT"
repository = "https://github.com/gianlucadark/lightship"

[dependencies]
ignore = "0.4"
tl = "0.7"
rayon = "1"
owo-colors = "4"
anstream = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
globset = "0.4"
